# StowageProject

./: Algorithm.cpp  Algorithm.h  AlgorithmRegistration.cpp  AlgorithmReverse.cpp  AlgorithmReverse.h  BaseAlgorithm.cpp  BaseAlgorithm.h  CMakeLists.txt  Container.cpp  Container.h  Floor.cpp  Floor.h  Port.cpp  Port.h  Route.cpp  Route.h  ShipPlan.cpp  ShipPlan.h  SimTest.cpp  SimTest.h  Simulator.cpp  Simulator.h  Spot.cpp  Spot.h  TODO list  Utils.cpp  Utils.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  main.cpp  makefile  myMain.cpp
Files/: algo_c_errors  bonus.txt  testsScript.py
Files/bad_algo_input/smallShip/: AAAAA_1.cargo_data  BBBBB_1.cargo_data
Files/bad_algo_input/travel17/: AAAAA_1.cargo_data  AAAAA_2.cargo_data  BBBBB_1.cargo_data  Plan.ship_plan  Route.route
Files/sim2/: simulation.errors.csv  simulation.results.csv
Files/sim3/: simulation.errors.csv  simulation.results.csv
Files/templates/: templateRoute.csv  ‏‏templateInstructions.csv  ‏‏templatePort.csv
algorithm/: AlgorithmReverse.cpp  BaseAlgorithm.cpp  BaseAlgorithm.h  _206223976_a.cpp  _206223976_a.h  _206223976_b.cpp  _206223976_b.h  _206223976_c.cpp  _206223976_c.h  makefile
common/: Container.cpp  Container.h  Floor.cpp  Floor.h  ISO_6346.h  Port.cpp  Port.h  Route.cpp  Route.h  ShipPlan.cpp  ShipPlan.h  Spot.h  Utils.cpp  Utils.h  WeightBalanceCalculator.cpp
interfaces/: AbstractAlgorithm.h  WeightBalanceCalculator.h
simulator/: AlgorithmRegistration.cpp  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.h  ThreadPool.cpp  ThreadPool.h  WeightBalanceCalculator.cpp  main.cpp  makefile
(+107 files in other folders)
